# notification-tray-stubs

./: pyproject.toml  renovate.json
src/notification_tray_stubs/: notification.py
