[project]
name = "notification-tray-stubs"
version = "0.1.1"
description = "Stubs package for notification-tray"
authors = [
    { name = "ctrl-q", email = "34975747+ctrl-q@users.noreply.github.com" }
]
requires-python = ">=3.9"
dependencies = [
    "typing-extensions>=4.14.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
